# communal-payments-calc

./: ChangeLog.md  CommunalPaymentsCalc.cabal  README.md
src/: CommunalPaymentsCalc.hs  Console.hs  Main.hs  Math.hs
src/CommunalPaymentsCalc/: Internal.hs
test/: CommunalPaymentsCalcSpec.hs
