Name:                   CommunalPaymentsCalc
Version:                0.0.0
Author:                 Nicola Spesivtsev <nicola.spesivcev@gmail.com>
Maintainer:             Nicola Spesivtsev <nicola.spesivcev@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      CommunalPaymentsCalc
  Other-Modules:        CommunalPaymentsCalc.Internal
  Build-Depends:        base >= 4 && < 5
                      , mtl
                      , safe
                      , transformers >= 0.4.2.0


executable communal-payments-calc
  main-is:           Main.hs
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Build-Depends:        base >= 4 && < 5
                      , mtl
                      , safe
                      , transformers >= 0.4.2.0


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , transformers >= 0.4.2.0

Source-Repository head
  Type:                 git
--  Location:
